--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ footer {
 }
 
 .modal-content img {
-  width: auto;
+  width: 100%;
   height: auto;
   max-height: 70vh;
   object-fit: cover;
@@ -335,15 +335,22 @@ footer {
   font-size: 14px;
   line-height: 1.3;
 }
-
-.left-content {
-  float: left;
-  margin-right: 20px;
+.content {
+  display: flex;
+  justify-content: space-around;
 }
 
+
+.left-content,
 .right-content {
-  overflow: hidden;
-  padding-top: 80px;
+  flex: 1;
+  padding: 0 10px; 
+}
+
+
+.right-content {
+  overflow-y: auto; 
+  padding-top: 80px; 
 }
 
 .close {
@@ -368,22 +375,11 @@ footer {
     padding: 10px;
   }
 
-  .modal-content img {
-    object-fit: contain;
-
-  }
-
-  .left-content {
-    float: none;
-    margin-bottom: 5px;
-  }
+  .left-content,
+  .right-content {
+    padding: 0; 
 
   .right-content {
     padding: 15px;
-  }
-
-  .close {
-    font-size: 20px;
-    margin-top: 0;
   }
 }
